@@ -35,6 +35,8 @@
 
 #include "utils.h"
 
+#define PROGRAM_NAME "profile2map"
+
 /* argv[0] */
 char *progname;
 
@@ -44,7 +46,7 @@ static void
 show_version( void )
 {
   printf(
-    "profile2map (" PACKAGE ") " PACKAGE_VERSION "\n"
+    PROGRAM_NAME " (" PACKAGE ") " PACKAGE_VERSION "\n"
     "Copyright (c) 2007 Stuart Brady\n"
     "License GPLv2+: GNU GPL version 2 or later "
     "<http://gnu.org/licenses/gpl.html>\n"
@@ -56,16 +58,18 @@ static void
 show_help( void )
 {
   printf(
-    "Usage: profile2map [OPTION] <profile> <map>\n"
+    "Usage: %s [OPTION] <profile> <map>\n"
     "Converts Fuse profiler output into Z80-style map format.\n"
     "\n"
     "Options:\n"
     "  -h, --help     Display this help and exit.\n"
     "  -V, --version  Output version information and exit.\n"
     "\n"
-    "Report profile2map bugs to <" PACKAGE_BUGREPORT ">\n"
-    "fuse-utils home page: <" PACKAGE_URL ">\n"
-    "For complete documentation, see the manual page of profile2map.\n"
+    "Report %s bugs to <%s>\n"
+    "%s home page: <%s>\n"
+    "For complete documentation, see the manual page of %s.\n",
+    progname,
+    PROGRAM_NAME, PACKAGE_BUGREPORT, PACKAGE_NAME, PACKAGE_URL, PROGRAM_NAME
   );
 }
 
@@ -111,13 +115,13 @@ int main( int argc, char **argv )
   argv += optind;
 
   if( error ) {
-    fprintf( stderr, "Try `profile2map --help' for more information.\n" );
+    fprintf( stderr, "Try `%s --help' for more information.\n", progname );
     return error;
   }
 
   if( argc != 2 ) {
     fprintf( stderr, "%s: usage: %s <profile> <map>\n", progname, progname );
-    fprintf( stderr, "Try `profile2map --help' for more information.\n" );
+    fprintf( stderr, "Try `%s --help' for more information.\n", progname );
     return 1;
   }
 
